
	* Fix naviframe's resize object problem when item was deleted.

2012-12-17  Chueon Park (Hermet)

	* Fix the popup that returned invalid action buttons.

2012-12-17  Chueon Park (Hermet)

	* Makes naviframe safety even if someone deletes the naviframe in transition finished cb.

2012-12-18  Chueon Park (Hermet)

	* Elm_transit image aniamtion effects supports elm_image object type.

2012-12-18  Chueon Park (Hermet)

	* Don't Elm_transit image animation use image preloading to avoid image flickering.

2012-12-18  Chueon Park (Hermet)

	* Let image update right now if the image preloading is disabled.

2012-12-18  Gustavo Sverzut Barbieri (k-s)

	* elm_plug now emits "image,resized" on server-side changes.
	* elm_plug typo fixed "image.deleted" to "image,deleted" ('.' -> ',')

2012-12-20  Henrique Dante de Almeida (hdante)

	* Add elm_dbus_menu to support D-Bus external menus.
	* Add main menu to elm_win, which can be exported via D-Bus
	* Add configuration: ELM_EXTERNAL_MENU, to switch between internal and external menus

2012-12-20  Murilo Pinoti Belluzzo (mbelluzzo)

	* Add elm_systray to set a Status Notifier Item in the System Tray (D-Bus).

2012-12-27  Jiyoun Park (jypark)

	* elm_photocam returns file_set error properly.

2012-12-28  Mike Blumenkrantz

        * Fix bug where genlist would delete items added during selection callback if a clear was queued

2012-12-27  Henrique Dante de Almeida (hdante)
	* Support item separators in D-Bus menu
	* Support freedesktop icons in D-Bus menu
	* Reduce D-Bus communication (omit default values)

2012-12-29  Mike Blumenkrantz

        * Tooltips now correctly set NETWM tooltip window type

2013-01-03  JaeHyun Jo (jae_hyun@cho@naver.com)

        * Fix the naviframe item part text to be set properly.

2013-01-03  Thiep Ha

        * Fix list separator size bug.

2013-01-03  Jaehwan Kim

        * Fix the bug which the callbacks of the sub-object are added even if the sub-object is added the parent object.